@@ -1,66 +1,77 @@
-# TableView_Igor
+# 👨‍👩‍👧‍👦 Gestión de Personas con JavaFX y MariaDB
 
-Aplicación JavaFX que permite gestionar una lista de personas, con funcionalidades de agregar, eliminar y restaurar registros. Los datos se muestran en un `TableView` y se validan antes de ser añadidos.
+## 🚀 1. Visión General del Proyecto
 
-## Estructura del proyecto
+Este proyecto es una aplicación de escritorio desarrollada con **JavaFX** y gestionada por **Maven** cuyo objetivo principal es la administración de registros de personas.
 
-TableView_Igor/
-├── src/
-│ └── main/
-│ ├── java/com/igoresparza/
-│ │ ├── Lanzador.java # Clase main que lanza la aplicación
-│ │ ├── MainApp.java # Clase que extiende Application
-│ │ ├── controladores/
-│ │ │ └── ControladorVentana.java
-│ │ └── modelo/
-│ │ └── Persona.java
-│ └── resources/com/igoresparza/fxml/
-│ └── tableView.fxml
-├── pom.xml
-└── target/
+Utiliza una arquitectura de **capas (MVC + DAO)** para sincronizar la interfaz gráfica (`TableView`) con una base de datos **MariaDB/MySQL**, permitiendo realizar operaciones CRUD (Crear, Leer, Actualizar, Eliminar, Restaurar) de manera persistente.
 
-markdown
-Copiar código
+### Características Clave
+* **Interfaz de Usuario:** Desarrollada con JavaFX (FXML y `ControladorVentana`).
+* **Persistencia:** Utiliza `PersonaDAO` y `ConexionBBDD` para interactuar con MariaDB.
+* **Logging:** Implementación de **SLF4J + Logback** en las 6 clases principales para trazar el flujo de la aplicación y diagnosticar errores.
+* **Internacionalización (i18n):** Preparado para múltiples idiomas mediante Resource Bundles (`.properties`).
 
-## Requisitos
+---
 
-- JDK 11 o superior (probado con JDK 23)
-- JavaFX SDK 17 o superior (probado con 24.0.2)
-- Maven 3.8 o superior
+## 🏗️ 2. Arquitectura de Código
 
-## Ejecutar desde IntelliJ
+El proyecto sigue una estructura limpia basada en paquetes para separar responsabilidades:
 
-1. Configura el JDK del proyecto a la versión correcta (ej. 23).
-2. Configura VM options para JavaFX:  
---module-path C:\Users\IGOR\Downloads\javafx-sdk-24.0.2\lib --add-modules javafx.controls,javafx.fxml
+| Paquete | Clases Clave | Responsabilidad |
+| :--- | :--- | :--- |
+| `com.Igoresparza` | `Lanzador`, `MainApp` | Inicialización del entorno JavaFX y punto de entrada. |
+| `com.Igoresparza.controladores` | `ControladorVentana` | Lógica de la interfaz de usuario, manejo de eventos y validación inicial. |
+| `com.Igoresparza.modelo` | `Persona` | Modelo de datos (entidad), validación de datos y lógica de negocio. |
+| `com.Igoresparza.dao` | `PersonaDAO` | Interacción directa con la BBDD (CRUD). |
+| `com.Igoresparza.bbdd` | `ConexionBBDD` | Gestión de la conexión JDBC a la BBDD. |
 
-r
-Copiar código
-3. Ejecuta la clase `Lanzador`.
+---
 
-## Ejecutar desde terminal
+## ⚙️ 3. Requisitos y Configuración
 
-1. Abre terminal en la carpeta `target`.
-2. Ejecuta el JAR generado por Maven:
+### 3.1. Requisitos de Software
+* **JDK 11** o superior (Versión configurada en `pom.xml` es la `11`).
+* **Maven 3.8+**
+* **MariaDB/MySQL Server** (Debe estar corriendo y accesible).
+
+### 3.2. Configuración de la Base de Datos
+
+El archivo `ConexionBBDD.java` contiene los parámetros de conexión. **Antes de ejecutar**, asegúrate de que el servidor MySQL o MariaDB está activo y has creado la base de datos necesaria:
+
+| Parámetro | Valor Configurado | Notas |
+| :--- | :--- | :--- |
+| **URL** | `jdbc:mysql://localhost:3307/Alumnos` | Se asume que el puerto `3307` está siendo usado (ej. Docker). |
+| **Usuario** | `root` | |
+| **Contraseña** | `admin` | |
+
+Se requiere la tabla `persona` con al menos las columnas `person_id` (PK, AUTO_INCREMENT), `first_name`, `last_name`, y `birth_date`.
+
+### 3.3. Logging
+
+El registro de eventos se gestiona mediante el archivo de configuración **`src/main/resources/logback.xml`**.
+
+* Los logs de nivel `INFO`, `WARN` y `ERROR` se muestran en la consola.
+* Los logs completos (incluyendo `DEBUG`) se guardan en un archivo (configurado dentro de `logback.xml`).
+
+---
+
+## 🛠️ 4. Construcción y Ejecución
+
+### 4.1. Construir el JAR Ejecutable (Maven)
+
+El proyecto utiliza el `maven-jar-plugin` y el `maven-dependency-plugin` para generar un JAR ejecutable que incluye todas las dependencias (`.jar`s de JavaFX, MySQL, SLF4J) en una carpeta interna `libs/`.
+
+---
+### 4.2. Ejecutar la Aplicación
+
+Una vez generado el JAR en la carpeta `target/`, la aplicación es completamente portable y se puede ejecutar directamente usando el comando `java -jar`.
+
+Este comando utiliza la clase `com.Igoresparza.Lanzador` como punto de entrada (definida en el `pom.xml`) para lanzar la aplicación JavaFX:
+
 ```bash
-"C:\Program Files\Java\jdk-23\bin\java.exe" -jar TableView_Igor-1.0-SNAPSHOT.jar
-Nota: Este JAR funciona desde terminal, pero no se abrirá con doble clic debido a dependencias de JavaFX.
+# Navega a la carpeta raíz del proyecto y ejecuta el JAR generado
+java -jar target/TableView_Igor-1.0-SNAPSHOT.jar
 
-Nota: He probado a crear un jpackage y un .exe para ejecutar el programa pero no lo he logrado
-
-Uso de la aplicación
-Introduce First Name, Last Name y Birth Date.
-
-Pulsa Add para agregar la persona a la tabla.
-
-Selecciona filas y pulsa Delete para eliminar.
-
-Pulsa Restore para restaurar los eliminados.
-
-Notas
-Los datos no se guardan en disco; permanecen en memoria mientras la aplicación está abierta.
-
-El proyecto usa ObservableList para que los cambios en la tabla se reflejen automáticamente.
-
-Autor
-Igor Esparza
+```bash
+mvn clean install
